--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <nav class="flex-center">
             <div class="left">
                 <h3 class="h3">Startup 3</h3>
-                <ul class="gray bold" >
+                <ul class="gray bold">
                     <li>
                         <select name="option" id="product" class="gray bold">
                             <option value="Product1">Products</option>
@@ -105,11 +105,17 @@
                 </div>
             </div>
             <div class="header3-right">
-                <img src="" alt="pic">
-                <p>We made it so beutiful and simple. It combines landings, pages, blogs and shop screens. It is definitely the tool you need in your collection! </p>
+                <div class="img">
+                    <p>
+                        <i class="fa-solid fa-play"></i>
+                    </p>
+
+                </div>
+                <p class="desc">We made it so beutiful and simple. It combines landings, pages, blogs and shop screens. It is
+                    definitely the tool you need in your collection! </p>
             </div>
         </main>
-       
+
     </div>
 
 </body>
