--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
             <p>Learn more</p>
         </div>
     </div>
-
     <!-- header_1 end -->
 
     <!-- header_2 start -->
@@ -64,9 +63,7 @@
     </div>
     <!-- header_2 end -->
 
-
     <!-- header_3 start -->
-
     <div class="header_3 full">
         <nav class="flex-center">
             <div class="left">
@@ -111,10 +108,78 @@
                     </p>
 
                 </div>
-                <p class="desc">We made it so beutiful and simple. It combines landings, pages, blogs and shop screens. It is
+                <p class="desc">We made it so beutiful and simple. It combines landings, pages, blogs and shop screens.
+                    It is
                     definitely the tool you need in your collection! </p>
             </div>
         </main>
+
+    </div>
+    <!-- header_3 end -->
+
+    <!-- header_4 start -->
+    <div class="header_4 full">
+        <nav class="flex-center">
+            <div class="left">
+                <h3 class="h3">Startup 3</h3>
+                <ul class="gray">
+                    <li>Features</li>
+                    <li>Downlods</li>
+                    <li>Docs</li>
+                    <li>Support</li>
+                    <li>Blog</li>
+
+                </ul>
+            </div>
+            <ul class="gray bold">
+                <li><i class="fa-brands fa-twitter"></i></li>
+                <li><i class="fa-brands fa-facebook"></i></li>
+                <li><i class="fa-brands fa-google-plus-g"></i></li>
+            </ul>
+        </nav>
+        <main>
+            <h1 class="h1">
+                Simple and beautiful ready for use blocks
+            </h1>
+            <div class="img">
+                <p>
+                    <i class="fa-solid fa-play"></i>
+                </p>
+            </div>
+        </main>
+
+    </div>
+
+    <!-- header_4 end -->
+    
+    <!-- header_5 start -->
+    <div class="header_5 full">
+        <nav class="flex-center">
+            <div class="left">
+                <h3 class="h3 blue">Startup 3</h3>
+            </div>
+            <ul class=" blue bold">
+                <li>Portfolio</li>
+                <li>How It Works</li>
+                <li>Pricing</li>
+                <li>About</li>
+                <li>LogIn</li>
+                <li><button>Sign In</button></li>
+            </ul>
+        </nav>
+        <main>
+            <h1 class="h1 blue">
+                A high-quality solution startup website quickly
+            </h1>
+            <button>Get Started</button>
+            <div class="img"> 
+            </div>
+        </main>
+        <div class="header5-footer flex-center gray">
+            <p style="border-right: 2px solid rgba(21, 20, 57, 0.4);">Startup Framework works on devices supporting Retina Display. Feel the clarity in each pixel.</p>
+            <p style="border-right: 2px solid rgba(21, 20, 57, 0.4);">There are a lot of different components that will help you create the perfect look and feel for your startup.</p>
+            <p>You can easily combine components in a variety ways for different design projects. It’s easy!</p>
+        </div>
 
     </div>
 
