--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <!-- header_4 end -->
     
     <!-- header_5 start -->
-    <div class="header_5 full">
+    <div class="header_5 ">
         <nav class="flex-center">
             <div class="left">
                 <h3 class="h3 blue">Startup 3</h3>
@@ -176,12 +176,43 @@
             </div>
         </main>
         <div class="header5-footer flex-center gray">
-            <p style="border-right: 2px solid rgba(21, 20, 57, 0.4);">Startup Framework works on devices supporting Retina Display. Feel the clarity in each pixel.</p>
-            <p style="border-right: 2px solid rgba(21, 20, 57, 0.4);">There are a lot of different components that will help you create the perfect look and feel for your startup.</p>
+            <p>Startup Framework works on devices supporting Retina Display. Feel the clarity in each pixel.</p>
+            <p id="left-rightborder">There are a lot of different components that will help you create the perfect look and feel for your startup.</p>
             <p>You can easily combine components in a variety ways for different design projects. It’s easy!</p>
         </div>
 
     </div>
+
+    <!-- header_5 end -->
+
+    <!-- header_6 start -->
+    <div class="header_6 full">
+        <nav class="flex-center">
+            <ul class="white">
+                <li>Products</li>
+                <li>Pricing</li>
+                <li>Community</li>
+            </ul>
+            <div class="left">
+                <h3 class="h3 white">Startup 3</h3>
+            </div>
+            <ul class="white">
+                <li>Login</li>
+                <li><button>Sign Up</button></li>
+            </ul>
+        </nav>
+        <main>
+            <h1 class="h1 white">
+                A high-quality solution startup website quickly
+            </h1>
+            <p class="playicon">
+                <i class="fa-solid fa-play"></i>
+            </p>
+            <p class="white">We made it so beutiful and simple. It combines landings, pages, blogs and shop screens. It is definitely the tool you need in your collection! </p>
+        </main>
+
+    </div>
+    <!-- header_6 end -->
 
 </body>
 
