--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     </div>
 
     <!-- header_4 end -->
-    
+
     <!-- header_5 start -->
     <div class="header_5 ">
         <nav class="flex-center">
@@ -172,12 +172,13 @@
                 A high-quality solution startup website quickly
             </h1>
             <button>Get Started</button>
-            <div class="img"> 
+            <div class="img">
             </div>
         </main>
         <div class="header5-footer flex-center gray">
             <p>Startup Framework works on devices supporting Retina Display. Feel the clarity in each pixel.</p>
-            <p id="left-rightborder">There are a lot of different components that will help you create the perfect look and feel for your startup.</p>
+            <p id="left-rightborder">There are a lot of different components that will help you create the perfect look
+                and feel for your startup.</p>
             <p>You can easily combine components in a variety ways for different design projects. It’s easy!</p>
         </div>
 
@@ -208,11 +209,84 @@
             <p class="playicon">
                 <i class="fa-solid fa-play"></i>
             </p>
-            <p class="white">We made it so beutiful and simple. It combines landings, pages, blogs and shop screens. It is definitely the tool you need in your collection! </p>
+            <p class="white">We made it so beutiful and simple. It combines landings, pages, blogs and shop screens. It
+                is definitely the tool you need in your collection! </p>
         </main>
 
     </div>
     <!-- header_6 end -->
+
+    <!-- header_7 start -->
+    <div class="header_7">
+        <div class="left-side">
+            <nav class="flex-center">
+                <div class="left">
+                    <h3 class="h3 blue">Startup 3</h3>
+                </div>
+                <ul class="gray bold">
+                    <li>Pricing</li>
+                    <li>About</li>
+                </ul>
+            </nav>
+            <main>
+                <h1 class="h1 blue">
+                    Great tool to boost your startup
+                </h1>
+                <p class="header7-desc gray">We made it so beutiful and simple. It combines landings, pages, blogs and shop screens.
+                    It is definitely the tool you need in your collection! </p>
+                <div class="btngroup">
+                    <button class="btn-blue">Get Started</button>
+                    <button class="btn-white bold">Learn More</button>
+                </div>
+                <p class="gray">By signing up, you agree to the Terms of Service</p>
+            </main>
+
+        </div>
+        <div class="side-img">
+
+        </div>
+    </div>
+    <!-- header_7 end -->
+
+
+        <!-- header_8 start -->
+    <div class="header_8">
+        <nav class="flex-center">
+            <ul class=" bold">
+                <li style="color: rgb(201, 195, 195);">Home</li>
+                <li class="white">Features</li>
+                <li class="white">Pricing</li>
+                <li class="white">Blog</li>
+                <li class="white"><i class="fa-solid fa-basketball"></i></li>
+            </ul>
+        </nav>
+        <main>
+            <div class="left-angle">
+                <i class="fa-solid fa-chevron-left"></i>
+            </div>
+            <div class="header8_desc">
+                <h3 class="h3 ">Startup 3</h3>
+                <h1 class="h1 ">Forget About Code</h1>
+                <p class="para">Startup Framework gives you complete freedom over your creative process — you don’t have to think about any technical aspects. There are no limits and absolutely no coding. </p>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="right-angle">
+                <i class="fa-solid fa-chevron-right"></i>
+            </div>
+        </main>
+        <div class="header8_btn">
+            <button>Create an Account</button>
+        </div>
+       
+    </div>
+
+
+        <!-- header_8 end -->
 
 </body>
 
