--- a/index.html
+++ b/index.html
@@ -284,10 +284,36 @@
         </div>
        
     </div>
-
-
         <!-- header_8 end -->
 
-</body>
 
+        <!-- header_9 start -->
+
+        <div class="header_9">
+            <nav class="">
+                <h3 class="h3 ">Startup 3</h3>
+                <ul>
+                    <li class="gray">Overview</li>
+                    <li>Features</li>
+                    <li>Company</li>
+                    <li>Platform</li>
+                    <li><button>Purchase</button></li>
+                </ul>
+            </nav>
+            <main>
+                <div class="header_9left">
+                    <h1 class="h1 blue">You have the design, you have the code</h1>
+                    <p class="para gray">We made it so beutiful and simple. It combines landings, pages, blogs and shop screens. It is definitely the tool you need in your collection! </p>
+                    <button>Expolre Design</button>
+                </div>
+                <div class="header_9right">
+                    <img src="/img/header_9 img.png" alt="header9 img">
+                </div>
+            </main>
+
+        </div>
+        <!-- header_9 end -->
+
+
+</body>
 </html>
