--- a/index.html
+++ b/index.html
@@ -232,7 +232,8 @@
                 <h1 class="h1 blue">
                     Great tool to boost your startup
                 </h1>
-                <p class="header7-desc gray">We made it so beutiful and simple. It combines landings, pages, blogs and shop screens.
+                <p class="header7-desc gray">We made it so beutiful and simple. It combines landings, pages, blogs and
+                    shop screens.
                     It is definitely the tool you need in your collection! </p>
                 <div class="btngroup">
                     <button class="btn-blue">Get Started</button>
@@ -249,7 +250,7 @@
     <!-- header_7 end -->
 
 
-        <!-- header_8 start -->
+    <!-- header_8 start -->
     <div class="header_8">
         <nav class="flex-center">
             <ul class=" bold">
@@ -267,7 +268,8 @@
             <div class="header8_desc">
                 <h3 class="h3 ">Startup 3</h3>
                 <h1 class="h1 ">Forget About Code</h1>
-                <p class="para">Startup Framework gives you complete freedom over your creative process — you don’t have to think about any technical aspects. There are no limits and absolutely no coding. </p>
+                <p class="para">Startup Framework gives you complete freedom over your creative process — you don’t have
+                    to think about any technical aspects. There are no limits and absolutely no coding. </p>
                 <ul>
                     <li></li>
                     <li></li>
@@ -282,38 +284,78 @@
         <div class="header8_btn">
             <button>Create an Account</button>
         </div>
-       
+
     </div>
-        <!-- header_8 end -->
+    <!-- header_8 end -->
 
 
-        <!-- header_9 start -->
+    <!-- header_9 start -->
 
-        <div class="header_9">
-            <nav class="">
+    <div class="header_9">
+        <nav class="">
+            <h3 class="h3 ">Startup 3</h3>
+            <ul>
+                <li class="gray">Overview</li>
+                <li>Features</li>
+                <li>Company</li>
+                <li>Platform</li>
+                <li><button>Purchase</button></li>
+            </ul>
+        </nav>
+        <main>
+            <div class="header_9left">
+                <h1 class="h1 blue">You have the design, you have the code</h1>
+                <p class="para gray">We made it so beutiful and simple. It combines landings, pages, blogs and shop
+                    screens. It is definitely the tool you need in your collection! </p>
+                <button>Expolre Design</button>
+            </div>
+            <div class="header_9right">
+                <img src="/img/header_9 img.png" alt="header9 img">
+            </div>
+        </main>
+
+    </div>
+    <!-- header_9 end -->
+
+
+    <!-- header_10 start -->
+
+    <div class="header_10">
+        <nav class="">
+            <div class="leftnav">
                 <h3 class="h3 ">Startup 3</h3>
                 <ul>
-                    <li class="gray">Overview</li>
-                    <li>Features</li>
-                    <li>Company</li>
-                    <li>Platform</li>
-                    <li><button>Purchase</button></li>
+                    <li>Products</li>
+                    <li>Pricing</li>
+                    <li>Community</li>
                 </ul>
-            </nav>
-            <main>
-                <div class="header_9left">
-                    <h1 class="h1 blue">You have the design, you have the code</h1>
-                    <p class="para gray">We made it so beutiful and simple. It combines landings, pages, blogs and shop screens. It is definitely the tool you need in your collection! </p>
-                    <button>Expolre Design</button>
-                </div>
-                <div class="header_9right">
-                    <img src="/img/header_9 img.png" alt="header9 img">
-                </div>
-            </main>
-
+            </div>
+            <ul class="rightnav">
+                <li>help</li>
+                <li>Login</li>
+                <li>Sign Up</li>
+            </ul>
+        </nav>
+        <main>
+            <h1>A high-quality solution for those who want a beautiful startup website quickly</h1>
+            <p>Startup contains components and complex blocks which can easily be integrated into almost any design.</p>
+            <button>Get Started for Free</button>
+        </main>
+        <div class="last_imggrp">
+            <div>
+                <img src="/img/header_10 img1.png" alt="img1">
+                <p>A high-quality solution for a beautiful startup website.</p>
+            </div>
+            <div>
+                <img src="img/header_10 img2.png" alt="img2">
+                <p>Learn more about Startup Framework in demo version.</p>
+            </div>
         </div>
-        <!-- header_9 end -->
+
+    </div>
+    <!-- header_10 end -->
 
 
 </body>
+
 </html>
