--- a/index.html
+++ b/index.html
@@ -355,6 +355,42 @@
     </div>
     <!-- header_10 end -->
 
+    <!-- header_11 start -->
+    <div class="header_11">
+        <nav class="">
+            <h3 class="h3 ">Startup 3</h3>
+            <ul>
+                <li class="gray">Abouts</li>
+                <li>Features</li>
+                <li>Contacts</li>
+                <li>Buy</li>
+            </ul>
+        </nav>
+        <main>
+            <div class="leftmain">
+                <h1 class="blue">
+                    Great things begin in a small way
+                </h1>
+                <p class="gray">
+                    We haven’t forgotten about responsive layout. With Startup Framework, you can create a website with full mobile support.
+                </p>
+
+                <div class="header11_btngrp">
+                    <button>Get Started</button>
+                    <button>Learn More</button>
+                </div>
+            </div>
+            <div class="rightmain">
+                <img src="/img/header_11 img.png" alt="header11 img">
+            </div>
+
+        </main>
+
+
+    </div>
+
+    <!-- header_11 end -->
+
 
 </body>
 
