--- a/index.html
+++ b/index.html
@@ -372,7 +372,8 @@
                     Great things begin in a small way
                 </h1>
                 <p class="gray">
-                    We haven’t forgotten about responsive layout. With Startup Framework, you can create a website with full mobile support.
+                    We haven’t forgotten about responsive layout. With Startup Framework, you can create a website with
+                    full mobile support.
                 </p>
 
                 <div class="header11_btngrp">
@@ -390,6 +391,33 @@
     </div>
 
     <!-- header_11 end -->
+
+
+
+    <!-- header_12 start -->
+    <div class="header_12">
+        <main>
+            <div>
+                <h3 class="">Startup 3</h3>
+                <h1 class="">Beautiful Startup Framework for Your Next Project</h1>
+                <p>
+                    A high-quality solution for those who want a bea-utiful startup website quickly.
+                </p>
+                <button>Download from App store</button>
+            </div>
+            <div class="imggrp">
+                <img src="img/header_12 img1.png" alt="img1">
+                <img src="/img/header_12 img2.png" alt="img2">
+            </div>
+
+
+        </main>
+
+
+    </div>
+
+
+    <!-- header_12 end -->
 
 
 </body>
