--- a/index.html
+++ b/index.html
@@ -420,6 +420,33 @@
     <!-- header_12 end -->
 
 
+    <!-- header_13 start -->
+    <div class="header_13">
+        <nav>
+            <h3 class="h3">Startup 3</h3>
+            <ul>
+                <li>Tour</li>
+                <li>Features</li>
+                <li>Pricing</li>
+                <li>Blog</li>
+                <li><i class="fa-solid fa-basketball"></i></li>
+                <li><i class="fa-brands fa-instagram"></i></li>
+            </ul>
+
+                <button>Get Started</button>  
+        </nav>
+        <main>
+            <h1>Create  sites without routine</h1>
+            <p>Startup gives you complete freedom over your creative process — you don’t have to think about any technical aspects. There are no limits and absolutely no coding. </p>
+        
+        </main>
+
+
+    </div>
+
+    <!-- header_13 end -->
+
+
 </body>
 
 </html>
