--- a/index.html
+++ b/index.html
@@ -446,6 +446,46 @@
 
     <!-- header_13 end -->
 
+    <!-- header_14 start -->
+    <div class="header_14">
+        <nav>
+            <h3>Startup 3
+            </h3>
+            <ul>
+                <li class="gray">Overview</li>
+                <li>Prices</li>
+                <li>Blog</li>
+                <li>Feedback</li>
+                <li>Purchase</li>
+            </ul>
+        </nav>
+        <main>
+            <div class="header14_desc">
+                <h1>Generate Awesome Web Pages</h1>
+                <p>The most important part of the Startup is the samples. The samples form a set of 25 usable pages you can use as is or you can add new blocks.</p>
+                <button>Learn more</button>
+            </div>
+            <div class="Signup_box">
+                <h1 class=blue>Sign Up Now</h1>
+                <input type="text" placeholder="Your email">
+                <input type="text" placeholder="Your Password">
+                <label for="check">
+                    <input type="checkbox" id="check">
+                    <p>I agree to the Terms of Service.</p>
+                </label>
+                <button class="btn_signin">Sign In</button>
+                <p id="separator"><span></span>Or<span></span></p>
+                <button class="btn_signup">Login Via Twitter</button>
+
+                <p><span>Do you have an Account?</span> <span style="color: #1DA1F2;">Sign In</span></p>
+
+
+            </div>
+        </main>
+    </div>
+
+    <!-- header_13 end -->
+
 
 </body>
 
